--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -3,7 +3,7 @@
 @import 'tailwindcss/utilities';
 
 body {
-  @apply bg-gray-600 text-white p-4;
+  @apply bg-gray-600 text-white;
 }
 
 h1 {
@@ -12,6 +12,10 @@ h1 {
 
 h2 {
   @apply text-xl font-black;
+}
+
+p {
+  @apply my-2;
 }
 
 amp-social-share {
