過去ブログを追加完了

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -74,3 +74,16 @@ a {
 .footnotes ol li {
   @apply text-sm;
 }
+
+svg:not(:root).svg-inline--fa, svg:not(:host).svg-inline--fa {
+  overflow: visible;
+  box-sizing: content-box;
+}
+
+.svg-inline--fa {
+  display: inline-block;
+  display: var(--fa-display, inline-block);
+  height: 1em;
+  overflow: visible;
+  vertical-align: -.125em;
+}
