uhyo様の「Tailwind考」に関する私なりの考えの記事を追加

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -75,6 +75,18 @@ a {
   @apply text-sm;
 }
 
+blockquote p::before {
+  content: "> ";
+}
+
+blockquote {
+  @apply px-3 py-1 italic bg-gray-800;
+}
+
+p > code {
+  @apply px-2 py-1 font-bold bg-gray-800 mx-2;
+}
+
 svg:not(:root).svg-inline--fa, svg:not(:host).svg-inline--fa {
   overflow: visible;
   box-sizing: content-box;
